@@ -7,7 +7,7 @@ public final class SaveTask implements Runnable {
     private final Player player;
 
     public SaveTask(Player paramplayer) {
-        this.player = paramplayer;
+        player = paramplayer;
     }
 
     @Override
