@@ -5,7 +5,7 @@ import com.github.games647.variables.VariableList;
 
 import org.bukkit.entity.Player;
 
-public final class SimpleClansReplacer {
+final class SimpleClansReplacer {
 
     private SimpleClansReplacer() {}
 
